2000-06-23  James Henstridge  <james@daa.com.au>

	* examples/gl/*.py: update examples with s/gtkgl/gtk.gl/

	* gtk/Makefile.am: add rules to build gtk.gl.

	* gtk/gtkglmodule.c (initgl): initialise lots of constants.

	* gtk/gtkgl.defs, gtk/gtkgl.override, gtk/gtkglmodule.c: wrapper for
	gtkglarea.

2000-06-22  James Henstridge  <james@daa.com.au>

	* gtk/libglade.override: add initialisation code to import GtkData
	base class.
	Add signal connection implementations.

	* codegen/codegen.py (write_source): fix up handling of registering
	subclasses when base class is not defined in this module.  Some help
	from the .override file will be needed.

2000-06-21  James Henstridge  <james@daa.com.au>

	* gtk/Makefile.am ($(srcdir)/libglade.c): read in gtk.defs for
	definitions before parsing libglade.defs.

	* codegen/codegen.py (__main__): allow reading of another defs
	file to read in its definitions without generating source code for
	it.

	* gtk/libglade.override, gtk/libglade.defs, gtk/libglademodule.c:
	start of libglade module.

	* codegen/mkskel.py: fix up skeleton generator a bit.

2000-06-20  James Henstridge  <james@daa.com.au>

	* examples/...: updated a few examples.

	* gtk/__init__.py: import ltihooks here, so I don't have to
	explicitely import it when testing out examples.  The import can
	probably go once I start installing the new pygtk.

	* codegen/mkskel.py (write_skels): a short script to generate
	some skeletons to help people start writing their extension.

	* gtk/gtk.override: implementation of GtkWidget.selection_add_targets.

2000-06-19  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override: ignore some more internal functions.

	* gtk/gtk.defs: removed the gtk_prefix on some functions.

	* gtk/gdk.defs: removed gdk_ prefix on some functions

	* gtk/gtk.override: add support for some unimplemented dnd functions.
	Ignore some internal dnd functions.

2000-06-18  James Henstridge  <james@daa.com.au>

	* examples/simple/hello1.py: